fixed favoriting, taglist wrapping, dup category

--- a/quote-influx/src/components/home/TagList.module.css
+++ b/quote-influx/src/components/home/TagList.module.css
@@ -14,6 +14,7 @@
     padding: 0.4rem 2rem 1rem;
     display: flex;
     gap: 1rem;
+    flex-wrap: wrap;
 }
 
 .singleTag {
