--- a/quote-influx/src/components/signin/SignIn.module.css
+++ b/quote-influx/src/components/signin/SignIn.module.css
@@ -70,6 +70,11 @@
 .inputContainer {
 }
 
+.errorMsg{
+    text-align: center;
+    color: #ff0000;
+}
+
 .buttonsContainer {
     display: flex;
     flex-direction: column;
